--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "morgan": "~1.9.1",
     "qrcode": "^1.5.1",
     "tsx": "^4.19.2",
+    "undici": "^7.10.0",
     "wa-multi-session": "^3.8.0",
     "zod": "^3.23.8"
   },
